# lora_drone

./: .gitignore  README.md  index.html  sim2_1drone_trilateration_mod.m
01_LoRa_characterization/: README.md
01_LoRa_characterization/json_backup/: 20190214_1458_database.json  20190215am_SF7.json  20190215am_allSF.json  20190215pm_antenna45.json  20190215pm_antennahor.json  20190215pm_antennaup.json  20190218pm_antenna_node_hor.json  20190307am_torus_hor_indoor_v2.json  20190307pm_torus_hor_indoor_v4.json  20190307pm_torus_hor_indoor_v5.json  20190308pm_torus_hor_indoor_v6.json  20190308pm_torus_hor_indoor_v8.json  20190311am_torus_vert_v1.json  20190311pm_noise_carac.json  20190312am_noise_carac_v2.json  20190515_new_antenna.json  20190516_new_antenna_v2.json  20190517_torus_hor.json  20190517_torus_vert.json  README.md  what is what.txt
01_LoRa_characterization/matlab_flight_tests/: 20190619-1300-lora-data.json  20190619-1355-drone-data.json  20190619-1355-tri-data.json  20190619-1417-drone-data.json  20190619-1417-tri-data.json  20190624-1300-lora-data.json  20190624-1440-drone-data.json  20190624-1440-tri-data.json  20190626-0800-lora-data.json  20190626-1500-drone-data.json  20190626-1500-tri-data.json  20190626-1545-drone-data.json  20190626-1545-tri-data.json  20190626-1600-drone-data.json  20190626-1600-tri-data.json  20190627-0930-drone-data.json  20190627-0930-lora-data.json  20190627-0930-tri-data.json  20190627-1500-drone-data.json  20190627-1500-lora-data.json  20190627-1600-lora-data.json  20190628-1100-drone-data.json  20190628-1100-lora-data.json  20190628-1500-drone-data.json  20190628-1500-lora-data.json  README.md  compare_precision.m  new_fit.m
01_LoRa_characterization/matlab_json_analysis/: .gitignore  README.md  coeff_ESP_dist_old.mat  coeff_RSSI_dist_old.mat  swisscom_data_analysis.m
01_LoRa_characterization/matlab_results/: README.md  coeff_ESP_dist.mat  coeff_RSSI_dist.mat  coeff_attenuation_angle.mat  func_signal_to_distance.m
01_LoRa_characterization/matlab_results_old_antenna/: README.md  how_to_run.m
02_MATLAB_simulations/: README.md
03_drone_implementation/: README.md
03_drone_implementation/vic_package/: CMakeLists.txt  README.md
03_drone_implementation/vic_package/src/: server_app.cpp  server_app.h  vic_continuous.cpp  vic_mission_v2.cpp  vic_mission_v3.cpp
03_drone_implementation/vic_package/src/old/: offb_node.cpp  offb_node_simple_v2.cpp  offb_node_v2.cpp
docs/: gmaps_lora_drone.js  index.html  test.py
drone_logs/: log_129_2019-5-1-11-07-54 (crash in building).ulg
gazebo_sim/: howto_mavros_on_rpi.txt  howto_offboard_example.txt  howto_offboard_on_rpi.txt  howto_rpi_connection.txt  offb_node.cpp
gazebo_sim/vic_package/: CMakeLists.txt  package.xml
gazebo_sim/vic_package/src/: offb_node.cpp  offb_node_simple.cpp  offb_node_v2.cpp  server_app.cpp  server_app.h  tcp_client.cpp  tcp_client.h  vic_coordinates.cpp  vic_mission.cpp  vic_mission_3drones.cpp  vic_mission_v2.cpp  vic_takeoff.cpp
gazebo_sim/vic_package/src/old/: vic_mission.cpp
gmaps_api/: gmaps_lora_drone.html  name.html  test.py
json_backup/: 20190212_database.json  20190215am_SF7.json  20190215am_allSF.json  20190215pm_antennaup.json  20190219pm_data.json  20190219pm_data_SF7.json  20190306pm_torus_horizontal.json  20190306pm_torus_vertical.json  20190307am_torus_hor_indoor.json  20190307am_torus_hor_indoor_v2.json  20190307pm_torus_hor_indoor_v3.json  20190307pm_torus_hor_indoor_v4.json  20190307pm_torus_hor_indoor_v5.json  20190308pm_torus_hor_indoor_v7.json  20190311pm_noise_carac.json  20190311pm_torus_vert_v2.json  20190312am_noise_carac_v3.json  what is what.txt
matlab_json_analyse/: 20190215pm_antenna45.json  20190218am_antenna_node.json  20190218pm_antenna_node_45.json  ESP_from_distance.m  RSSI_from_distance.m  SF_correction.m  antenna_orientation.m  antenna_orientation_node.m  data_analysis.m  database.json  database2.json  database3.json  decode_json.m  distance_from_ESP.m  distance_from_RSSI.m  func_ESP_to_distance.mat  func_ESP_to_distance_att.mat  func_RSSI_to_dist.mat  func_RSSI_to_dist_att.mat  func_distance_to_signal.m  func_distance_to_signal_ci.m  func_distance_to_signal_old.m  func_signal_to_distance_ci.m  func_signal_to_distance_old.m  interp_polynom.mat  interp_polynom_ESP.mat  interp_polynom_RSSI.mat  json_decode.asv  json_decode.m  plot_gradient.m  polynom_ESP_to_dist.mat  polynom_RSSI_to_dist.mat  polynom_dist_to_ESP.mat  polynom_dist_to_RSSI.mat  signal_2d_plot.m  swisscom_data_analysis.m  visualize_data.m
matlab_results/: coeff_RSSI_dist.mat  func_attenuation_angle.m  func_distance_to_signal.m  how_to_run.m
matlab_signal_noise/: characterisation1.m  equation_system.m  equation_system_v2.m  get_ESP.m  noise_carac.m  noise_carac_v2.m  noise_normal_sigma.mat  signal_attenuation_angle.m  test_antenna_formula.m  test_system.m
matlab_sim/: antenna_test.m  drone_sim.m  drone_sim2.m  multiple_run.m  sim_1drone_movement.m  sim_1drone_trilocation.m  sim_3drone_trilocation.m  trilateration_test.m
matlab_sim_v2/: analyse_3d_ground.m  get_noisy_signal.m  multiple_run.m  param.m  param_swarm.m  possible_simulations.txt  sim2_1drone_continuous.m  sim2_1drone_gradient.m  sim2_1drone_trilateration.m  sim2_1drone_trilateration_mod.m  sim2_3drone_continuous.m  sim2_3drone_swarm.m  sim2_3drone_swarm_v2.m  sim2_3drone_trilateration.m
matlab_torus_carac/: torus_carac_hor.m  torus_carac_vert.m
rpi/: florian_code_analysis.txt  pub_att.cpp
scripts/: copy_vic_package_in_git  copy_vic_package_in_git.sh  launch_PX4.sh  launch_QGC.sh  launch_catkin.sh  reverse_ssh.sh  update_vic_package_from_git.sh
server_app/: README.md  app.py  app_backup_20190503.py  requirements.txt  test.py
tuino_lora/: README.md  tuino_lora.ino  tuino_lora_calibration.ino
tuino_lora_calibration/: display_utils.h  gmx_lr.cpp  tuino_lora_calibration.ino
tuino_torus_carac/: gmx_lr.h  tuino_torus_carac.ino
(+181 files in other folders)
